syntax = "proto3";

import "google/protobuf/struct.proto";

package record_publisher;

service RecordPublisher {
    rpc Publish(PublishRequest) returns (PublishResponse);
}

message PublishRequest {
    repeated Record records = 1;
}

message PublishResponse {
    bool successful = 1;
    repeated RecordPublishJob jobs = 2;
    optional string message = 3;
}

message RecordPublishJob {
    string id = 1;
    string stream_key = 2;
}

enum Tier {
    UNDECLARED_TIER = 0;
    SYSTEM = 1;
    SUBSYSTEM = 2;
    COMPONENT = 3;
    SUBCOMPONENT = 4;
}

message Record {
    oneof record_data {
        EventRecord event = 4;
        RuntimeRecord runtime = 5;
        InputRecord input = 6;
        OutputRecord output = 7;
        FeedbackRecord feedback = 8;
        MetadataRecord metadata = 9;
    }
}

message EventRecord {
    Tier tier = 1;
    string subject_id = 2;
    string parent_id = 3;
    string id = 4;
    string name = 5;
    optional google.protobuf.Value parameters = 6;
    optional string version = 7;
    optional string environment = 8;
}

message RuntimeRecord {
    Tier tier = 1;
    string subject_id = 2;
    string event_id = 3;
    string id = 4;
    float start_time = 5;
    float end_time = 6;
    optional string error_type = 7;
    optional string error_content = 8;
}

message InputRecord {
    Tier tier = 1;
    string subject_id = 2;
    string event_id = 3;
    string id = 4;
    string field_name = 5;
    google.protobuf.Value field_value = 6;
}

message OutputRecord {
    Tier tier = 1;
    string subject_id = 2;
    string event_id = 3;
    string id = 4;
    string field_name = 5;
    google.protobuf.Value field_value = 6;
}

message FeedbackRecord {
    Tier tier = 1;
    string subject_id = 2;
    string event_id = 3;
    string id = 4;
    string field_name = 5;
    google.protobuf.Value field_value = 6;
}

message MetadataRecord {
    Tier tier = 1;
    string subject_id = 2;
    string event_id = 3;
    string id = 4;
    string field_name = 5;
    string field_value = 6;
}
